fix(toggle): fix toggle shrink when slot are too big

--- a/packages/components/src/toggle/src/components/osds-toggle/osds-toggle.scss
+++ b/packages/components/src/toggle/src/components/osds-toggle/osds-toggle.scss
@@ -25,6 +25,7 @@
 @include osds-toggle-on-container-element {
   display: inline-block;
   position: relative;
+  flex-shrink: 0;
 }
 
 @include osds-toggle-on-slider-element {
